2025-12-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

2025-12-02  Dirk Eddelbuettel  <edd@debian.org>

	* R/loadRcppModules.R: Remove file with function deprecated years ago
	* man/loadRcppModules-deprecated.Rd: Idem
	* NAMESPACE: Remove reference to loadRcppModules()
	* man/loadModule.Rd: Idem
	* man/Rcpp-deprecated.Rd: Idem
	* vignettes/rmd/Rcpp-modules.Rmd: Idem

2025-12-01  Kevin Ushey <kevinushey@gmail.com>

	* R/Attributes.R: Update OpenMP plugin for macOS

2025-11-29  Dirk Eddelbuettel  <edd@debian.org>

	* R/RcppLdpath.R: Revisit deprecation warnings via 'message()' to be
	turned into warning or deprecation in 12 or more months 'when suitable'

2025-11-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/r/check_r_headers.h: Add RCPP_NO_R_HEADERS_CHECK
	override to skip new check

2025-11-23  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/r/check_r_headers.h: New header to check if R.h
	or related R headers were installed first
	* inst/include/RcppCommon.h: Call new header as first thing

2025-11-04  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/macos.yaml (jobs): Roll macos-13 to macos-14

2025-11-01 Iñaki Ucar <iucar@fedoraproject.org>

	* inst/include/Rcpp/hash/IndexHash.h: Normalize values for all comparisons
	* inst/include/Rcpp/hash/SelfHash.h: Idem
	* inst/tinytest/test_sugar.R: Add test for signed zeroes

2025-10-21 Iñaki Ucar <iucar@fedoraproject.org>

	* inst/include/Rcpp/exceptions_impl.h: use __has_include to simplify checks
	to enable demangling, making them robust for more platforms

2025-10-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

	* inst/tinytest/test_sugar.R: Simplify and generalize the August fix
	as we no longer need to control for R-devel which has been corrected

2025-09-04  Dirk Eddelbuettel  <edd@debian.org>
