@@ -73,8 +73,6 @@ namespace Rcpp {
 #include <typeinfo>
 #include <utility>
 #include <Rcpp/sprintf.h>
-#include <R_ext/Callbacks.h>
-#include <R_ext/Visibility.h>
 #include <Rcpp/utils/tinyformat.h>
 
 #include <Rmath.h>
